--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -4,19 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>sandbox</groupId>
+        <artifactId>java-sandbox</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>sandbox</groupId>
-    <artifactId>java-sandbox</artifactId>
+    <artifactId>rest</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>java</module>
-        <module>rest</module>
-    </modules>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
 </project>
